# haskell-template

./: README.md  haskell-template.cabal
Utils/: Test.hs
module/lesson1/: Task1.hs  Test1.hs
module/lesson2/: Task2.hs  Test2.hs
src/: TestUtils.hs
