cabal-version:      2.4
name:               haskell-template
version:            0.1.0.0
synopsis:           Haskell bad
description:        Haskell Template with Unit Tests and Benchmarks
homepage:           https://github.com/Rettend/haskell-project
license:            MIT
license-file:       LICENSE
author:             Hegyi Ãron Ferenc
maintainer:         hegyi.aron101@gmail.com
extra-source-files: README.md

library
  exposed-modules:
    Task1
    Task2
    Test1
    Test2

  other-modules:    Utils.Test
  hs-source-dirs:   Utils Module/Lesson1 Module/Lesson2
  build-depends:    base ^>=4.17.2.0
  default-language: Haskell2010

-- executable haskell-template
-- main-is:          Main.hs
-- hs-source-dirs:   app
-- build-depends:    base ^>=4.17.2.0
-- default-language: Haskell2010
